# Algorithm-notebook

./: .gitignore  0-1背包问题.cpp  BFS学习1.cpp  CMakeLists.txt  DFS学习.cpp  DFS学习2.cpp  Find_Prime.cpp  PAATB1002_2.cpp  PAT1001.cpp  PATA1001.cpp  PATA1002.cpp  PATA1003.cpp  PATA1004.cpp  PATA1007.cpp  PATA1008.cpp  PATA1010.cpp  PATA1011.cpp  PATA1015.cpp  PATA1016_2.cpp  PATA1017_2.cpp  PATA1019.cpp  PATA1021.cpp  PATA1021_2.cpp  PATA1023.cpp  PATA1023_2.cpp  PATA1025.cpp  PATA1026.cpp  PATA1027.cpp  PATA1028.cpp  PATA1030.cpp  PATA1032.cpp  PATA1033.cpp  PATA1035.cpp  PATA1036.cpp  PATA1037.cpp  PATA1040.cpp  PATA1042.cpp  PATA1044.cpp  PATA1045.cpp  PATA1046.cpp  (+90 more)
2020autumn/: 1.cpp  2.cpp  3.cpp  4.cpp
2020spring/: 1.cpp  2.cpp  4.cpp
AlgoTemplate/: bigInteger.cpp  graph.cpp  并查集.cpp  科学计数法.cpp
PAT-A/: PATA1001.cpp  PATA1002.cpp  PATA1005.cpp  PATA1006.cpp  PATA1009.cpp  PATA1012.cpp  PATA1013.cpp  PATA1016.cpp  PATA1017.cpp  PATA1018.cpp  PATA1018_2.cpp  PATA1020.cpp  PATA1021.cpp  PATA1022.cpp  PATA1022_1.cpp  PATA1024.cpp  PATA1024_2.cpp  PATA1028.cpp  PATA1029.cpp  PATA1031.cpp  PATA1034.cpp  PATA1038.cpp  PATA1039.cpp  PATA1040.cpp  PATA1041.cpp  PATA1042.cpp  PATA1043.cpp  PATA1046.cpp  PATA1047_2.cpp  PATA1049.cpp  PATA1050.cpp  PATA1053.cpp  PATA1053_2.cpp  PATA1054.cpp  PATA1055.cpp  PATA1055_2.cpp  PATA1058.cpp  PATA1060.cpp  PATA1063.cpp  PATA1063_2.cpp  (+44 more)
PAT-B/: PATB1002_2.cpp  PATB1005.cpp  PATB1006.cpp  PATB1008.cpp  PATB1009.cpp  PATB1010.cpp  PATB1012.cpp  PATB1018.cpp  PATB1031.cpp  PATB1032.cpp  PATB1033.cpp  PATB1036.cpp  PATB1041.cpp  PATB1043.cpp
(+129 files in other folders)
