#cmake_minimum_required(VERSION 3.14)

project(PAT)

add_executable(1151 PAT-A/PATA1151.cpp)
add_executable(1155 PAT-A/PATA1155.cpp)
add_executable(1034 PAT-A/PATA1034.cpp)
add_executable(2020autumn-1 2020autumn/1.cpp)
add_executable(2020autumn-2 2020autumn/2.cpp)
add_executable(2020autumn-3 2020autumn/3.cpp)
add_executable(2020autumn-4 2020autumn/4.cpp)


add_executable(2020spring-1 2020spring/1.cpp)
add_executable(2020spring-2 2020spring/2.cpp)

add_executable(AlgoTemplate AlgoTemplate/graph.cpp)